# pyquantization

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
bindings/: pyquantization.cpp
src/refine/: aligned_alloc.h  cgls.cpp  cgls.h  vectorize.h
tests/: conftest.py  test_quantize.py
